--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
@@ -8,6 +8,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
+
 <script>
     $(function () {
         CargarPuntosDeVenta();
@@ -216,7 +217,7 @@
                     }
                 },
                 error: function (xhr, textStatus, errorThrown) {
-                    
+
                 }
             });
 
@@ -500,6 +501,26 @@
     @Html.HiddenFor(q => q.vt_tipoDoc)
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
+    if (Model.PedirDesbloqueo)
+    {
+        <div class="row">
+            <div class="col-md-6">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="">Usuario administrador</label>
+                        @Html.TextBoxFor(q => q.IdUsuarioAut, new { @class = "form-control", @id = "IdUsuarioAut" })
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="">Contraseña</label>
+                        @Html.PasswordFor(q => q.contrasena_admin, new { @class = "form-control", @id = "contrasena_admin" })
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
+
     if (ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
@@ -509,6 +530,7 @@
         </div>
 
     }
+
 
     <div class="modal fade" id="OpModal" role="dialog">
         <div class="modal-dialog modal-lg">
@@ -576,7 +598,7 @@
                         <input type="text" id="txtPorDescuento" class="form-control" />
                     </div>
                     <div class="col-md-6 form-group">
-                        <label for="chk_aplicar_todo"><input type="checkbox" id="chk_aplicar_todo" value="true|false"/> Aplicar descuento a toda la factura</label>                        
+                        <label for="chk_aplicar_todo"><input type="checkbox" id="chk_aplicar_todo" value="true|false" /> Aplicar descuento a toda la factura</label>
                     </div>
                     <div class="col-md-6">
                         <button type="button" class="btn btn-primary" onclick="ModificarLinea();">Aceptar</button>
@@ -743,7 +765,7 @@
                             <button type="button" class="btn btn-primary" id="btn_desbloquear" onclick="MostrarModalDesbloqueo();">
                                 <i class="fa fa-lock"></i> Desbloquear
                             </button>
-                            <label id="EstadoDesbloqueo" class="text-danger" style="margin-left:5px;" hidden></label>                            
+                            <label id="EstadoDesbloqueo" class="text-danger" style="margin-left:5px;" hidden></label>
                         </div>
                     </div>
                     <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_cuotas">
@@ -782,10 +804,10 @@
                         <i class="icon fa fa-warning"></i> <label id="txtMensaje">MENSAJE</label>
                     </h4>
                 </div>
-            </div>            
-        </div>        
+            </div>
+        </div>
     </div>
-    
+
 
     <div class="row">
         <div class="col-md-12">
