--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorCobrarReportes/CXC_005.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorCobrarReportes/CXC_005.cshtml
@@ -33,7 +33,7 @@
                 <div class="col-md-4">
                     <div class="form-group">
                         <label for="IdCliente">Cliente</label>
-                        @Html.Partial("_CmbCliente_CXC", Model)
+                        @Html.Partial("_CmbCliente_CXC", Model.IdCliente)
                         @Html.ValidationMessageFor(q => q.IdCliente, "", new { @class = "text-danger" })
 
                     </div>
