--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorCobrarReportes/_CmbCliente_CXC.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorCobrarReportes/_CmbCliente_CXC.cshtml
@@ -27,7 +27,6 @@
         settings.Properties.AllowNull = true;
     })
     .BindList(new Core.Erp.Web.Areas.Reportes.Controllers.CuentasPorCobrarReportesController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Reportes.Controllers.CuentasPorCobrarReportesController().get_info_bajo_demanda)
-    .Bind(Model.IdCliente == 0 ? "" : Model.IdCliente);
-
+.Bind(Model.GetType() == typeof(Core.Erp.Info.Helps.cl_filtros_facturacion_Info) ? "" : (Model == 0 ? "" : Model));
 }
 @comboBox.GetHtml()
