--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Rdep/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Rdep/Index.cshtml
@@ -27,7 +27,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdProveedor">Empleado</label>
-                    @Html.Partial("_CmbEmpleado_proyeccion", Model.IdEmpleado)
+                    @Html.Partial("_CmbEmpleado_rdep", Model.IdEmpleado)
                     @Html.ValidationMessageFor(q => q.IdEmpleado, "", new { @class = "text-danger" })
                 </div>
             </div>
