--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Rdep/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Rdep/Index.cshtml
@@ -34,8 +34,8 @@
         </div>
     </div>
     <div class="box-footer">
-        <button type="button" class="btn btn-default" id="btn_buscar">Buscar</button>
-        <button type="submit" class="btn btn-primary" id="btn_guardar" onclick="Descargar();">Descargar</button>
+        <button type="button" class="btn btn-default" id="btn_buscar" onclick="Buscar();">Buscar</button>
+        <button type="submit" class="btn btn-primary" id="btn_guardar" >Descargar</button>
     </div>
 
     <div class="row">
@@ -53,8 +53,8 @@
 
     function Buscar() {
         var datos = {
-            IdEmpresa: $("#pe_anio").val(),
-            IdUsuario: IdEmpleado.GetValue()
+            Anio: $("#pe_anio").val(),
+            IdEmpleado: IdEmpleado.GetValue()
         }
         $("#btn_guardar").disabled = true;
         $.ajax({
@@ -67,7 +67,7 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                GridViewPartial_rdep_det.PerformanceCalback();
+                GridViewPartial_rdep_det.PerformCallback();
             },
             error: function (error) {
             }
