--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_002.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_002.cshtml
@@ -67,6 +67,13 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <div class="checkbox">
+                                <label for="Check1">@Html.CheckBoxFor(q=>q.Check1) Mostrar solo cartera vencida</label>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- /.box-body -->
