--- a/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/Usuario/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/Usuario/Anular.cshtml
@@ -37,25 +37,38 @@
 
     <div class="row">
         <div class="col-md-12">
-
-            <div class="col-md-2">
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label for="">@Html.CheckBoxFor(q => q.ExigirDirectivaContrasenia) Exigir contraseña</label>
-                    </div>
+            <div class="col-md-9">
+                <div class="form-group" id="div_admin">
+                    <label for="contrasena_admin">Contraseña Administrador</label>
+                    @Html.PasswordFor(q => q.contrasena_admin, new { @class = "form-control", @id = "contrasena_admin" })
                 </div>
             </div>
-
-            <div class="col-md-10">
+            <div class="col-md-3">
                 <div class="form-group">
                     <div class="checkbox">
-                        <label for="">@Html.CheckBoxFor(q => q.CambiarContraseniaSgtSesion) Cambiar contraseña el próximo inicio de sesión</label>
+                        <label for="es_super_admin">@Html.CheckBoxFor(q => q.es_super_admin, new { @id = "es_super_admin" }) ¿Es usuario Administrador?</label>
+                    </div>
+                    <div class="checkbox">
+                        <label for="ExigirDirectivaContrasenia">@Html.CheckBoxFor(q => q.ExigirDirectivaContrasenia) Exigir directivas de contraseña</label>
+                    </div>
+                    <div class="checkbox">
+                        <label for="CambiarContraseniaSgtSesion">@Html.CheckBoxFor(q => q.CambiarContraseniaSgtSesion) Cambiar contraseña el próximo inicio de sesión</label>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="IdMenu">Menú inicio de sesión</label>
+                    @Html.DropDownListFor(q => q.IdMenu, new SelectList(ViewBag.lst_menu, "IdMenu", "DescripcionMenu_combo", Model.IdMenu == null ? 0 : Model.IdMenu), new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.IdMenu, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="col-md-12">
         <table class="table table-bordered table-striped dataTable" role="grid">
             <thead>
