--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/Nuevo.cshtml
@@ -8,23 +8,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script type="text/javascript">
-    $(function () {
-        //Date picker
-        $('#Fecha').datepicker({
-            autoclose: true
-        })
-        $('#Fecha_ini').datepicker({
-            autoclose: true
-        })
-        $('#Fecha_fin').datepicker({
-            autoclose: true
-        })
-    });
 
     function MostrarModal() {
         var datos = {
-            Fecha_ini: $("#Fecha_ini").val(),
-            Fecha_fin: $("#Fecha_fin").val(),
+            Fecha_ini: Fecha_ini.GetDate(),
+            Fecha_fin: Fecha_fin.GetDate(),
             IdSucursal: $("IdSucursal").val(),
             signo: $("#dev_signo").val()
         }
@@ -125,7 +113,15 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.TextBoxFor(q => q.Fecha, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "Fecha" })
+                        @Html.DevExpress().DateEditFor(q=> q.Fecha, settings =>
+                    {
+                        settings.Name = "Fecha";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.Fecha, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -142,7 +138,15 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.TextBoxFor(q => q.Fecha_ini, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "Fecha_ini" })
+                        @Html.DevExpress().DateEditFor(q=> q.Fecha_ini, settings =>
+                    {
+                        settings.Name = "Fecha_ini";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.Fecha_ini, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -154,7 +158,15 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.TextBoxFor(q => q.Fecha_fin, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "Fecha_fin" })
+                        @Html.DevExpress().DateEditFor(q=> q.Fecha_fin, settings =>
+                    {
+                        settings.Name = "Fecha_fin";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.Fecha_fin, "", new { @class = "text-danger" })
                     </div>
                 </div>
