--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Cliente/_GridViewPartial_fa_vendedor.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Cliente/_GridViewPartial_fa_vendedor.cshtml
@@ -31,8 +31,8 @@
         //Funcion para inicializar fila al presionar nuevo
         settings.InitNewRow = (s, e) =>
         {
-            e.NewValues["IdSucursal"] = 0;
-            e.NewValues["IdVendedor"] = 0;
+            e.NewValues["IdSucursal"] = "";
+            e.NewValues["IdVendedor"] = "";
         };
         settings.Columns.Add(column =>
         {
