--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/_CmbProducto_IngresoInventario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/_CmbProducto_IngresoInventario.cshtml
@@ -19,12 +19,11 @@
         settings.Properties.Columns.Add("pr_descripcion", "Producto", 65);
         settings.Properties.Columns.Add("nom_categoria", "Categoria", 15);
         settings.Properties.Columns.Add("nom_presentacion", "Presentación", 15);
-        settings.Properties.FilterMinLength = 3;
 
 
     })
     .BindList(new Core.Erp.Web.Areas.Inventario.Controllers.IngresoInventarioController().get_list_bajo_demanda,
     new Core.Erp.Web.Areas.Inventario.Controllers.IngresoInventarioController().get_info_bajo_demanda)
-    .Bind(Model.GetType() == typeof(Core.Erp.Info.Inventario.in_Ing_Egr_Inven_Info) ? "" : (Model == 0 ? "" : Model));
+    .Bind(Model.GetType() == typeof(Core.Erp.Info.Inventario.in_Ing_Egr_Inven_Info) ? "" : (Model.ToString() == "0" ? "" : Model));
 }
 @comboBox.GetHtml()
