--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_CmbCliente_Factura.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_CmbCliente_Factura.cshtml
@@ -21,7 +21,7 @@
         settings.Properties.Columns.Add("pe_cedulaRuc", "RUC", 20);
         settings.Properties.Columns.Add("pe_nombreCompleto", "Cliente", 70);
         settings.Properties.FilterMinLength = 3;
-        settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){get_info_cliente();}";
+        settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){get_info_cliente(); ValidarCliente();}";
     })
     .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.FacturaController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Facturacion.Controllers.FacturaController().get_info_bajo_demanda)
     .Bind(Model.GetType() == typeof(Core.Erp.Info.Facturacion.fa_factura_Info) ? "" : (Model == 0 ? "" : Model));
