--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Revision/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Revision/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.Erp.Info.Helps.cl_filtros_inventario_Info
 @{
     Layout = "~/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml";
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Revisión de inventario";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
