--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
@@ -290,7 +290,15 @@
                                 <div class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
                                 </div>
-                                @Html.TextBoxFor(q => q.lote_fecha_fab, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "lote_fecha_fab" })
+                                @Html.DevExpress().DateEditFor(q=> q.lote_fecha_fab, settings =>
+                            {
+                                settings.Name = "lote_fecha_fab";
+                                settings.Properties.UseMaskBehavior = true;
+                                settings.Properties.EditFormat = EditFormat.Date;
+                                settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                            }).GetHtml()
                                 @Html.ValidationMessageFor(q => q.lote_fecha_fab, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -304,7 +312,15 @@
                                 <div class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
                                 </div>
-                                @Html.TextBoxFor(q => q.lote_fecha_vcto, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "lote_fecha_vcto" })
+                                @Html.DevExpress().DateEditFor(q=> q.lote_fecha_vcto, settings =>
+                            {
+                                settings.Name = "lote_fecha_vcto";
+                                settings.Properties.UseMaskBehavior = true;
+                                settings.Properties.EditFormat = EditFormat.Date;
+                                settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                            }).GetHtml()
                                 @Html.ValidationMessageFor(q => q.lote_fecha_vcto, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -515,12 +531,7 @@
 }
 <script>
         $(function () {
-            $('#lote_fecha_vcto').datepicker({
-                autoclose: true
-            })
-            $('#lote_fecha_fab').datepicker({
-                autoclose: true
-            })
+
             $("#link_precios").hide();
             cargar_lineas();
             cargar_grupos();
