--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/Nuevo.cshtml
@@ -37,8 +37,16 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.TextBoxFor(q => q.tr_fecha, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "tr_fecha" })
-                        @Html.ValidationMessageFor(q => q.tr_fecha, "", new { @class = "text-danger" })
+                        @Html.DevExpress().DateEditFor(q=> q.tr_fecha, settings =>
+                    {
+                        settings.Name = "tr_fecha";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
+                         @Html.ValidationMessageFor(q => q.tr_fecha, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
@@ -140,11 +148,3 @@
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
-<script>
-    $(function () {
-        //Date picker
-        $('#tr_fecha').datepicker({
-            autoclose: true
-        })
-    });
-</script>
