--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_010.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_010.cshtml
@@ -87,7 +87,15 @@
                                       <div class="input-group-addon">
                                           <i class="fa fa-calendar"></i>
                                       </div>
-                                      @Html.TextBoxFor(q => q.fecha_ini, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_ini" })
+                                      @Html.DevExpress().DateEditFor(q=> q.fecha_ini, settings =>
+                                  {
+                                      settings.Name = "fecha_ini";
+                                      settings.Properties.UseMaskBehavior = true;
+                                      settings.Properties.EditFormat = EditFormat.Date;
+                                      settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                      settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                      settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                  }).GetHtml()
                                       @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
                                   </div>
                               </div>
@@ -99,7 +107,15 @@
                                       <div class="input-group-addon">
                                           <i class="fa fa-calendar"></i>
                                       </div>
-                                      @Html.TextBoxFor(q => q.fecha_fin, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_fin" })
+                                      @Html.DevExpress().DateEditFor(q=> q.fecha_fin, settings =>
+                                  {
+                                      settings.Name = "fecha_fin";
+                                      settings.Properties.UseMaskBehavior = true;
+                                      settings.Properties.EditFormat = EditFormat.Date;
+                                      settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                      settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                      settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                  }).GetHtml()
                                       @Html.ValidationMessageFor(q => q.fecha_fin, "", new { @class = "text-danger" })
                                   </div>
                               </div>
@@ -147,13 +163,7 @@
     $(function () {
         cargar_bodega();
         cargar_lineas();
-        $('#fecha_ini').datepicker({
-            autoclose: true
-        })
 
-        $('#fecha_fin').datepicker({
-            autoclose: true
-        })
     });
 
     $("#IdSucursal").change(function () {
