--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/Nuevo.cshtml
@@ -32,7 +32,7 @@
             </div>
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="">Fecha</label>
+                    <label for="tr_fecha">Fecha</label>
                     <div class="input-group date">
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
