--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_009.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_009.cshtml
@@ -58,7 +58,15 @@
                                 <div class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
                                 </div>
-                                @Html.TextBoxFor(q => q.fecha_fin, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_corte" })
+                                @Html.DevExpress().DateEditFor(q=> q.fecha_fin, settings =>
+                            {
+                                settings.Name = "fecha_fin";
+                                settings.Properties.UseMaskBehavior = true;
+                                settings.Properties.EditFormat = EditFormat.Date;
+                                settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                            }).GetHtml()
                                 @Html.ValidationMessageFor(q => q.fecha_fin, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -111,9 +119,7 @@
 
 <script type="text/javascript">
     $(function () {
-        $('#fecha_corte').datepicker({
-            autoclose: true
-        });
+
    $("#IdSucursal").change(function () {
             cargar_bodega();
         });
