--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_012.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_012.cshtml
@@ -58,16 +58,16 @@
                                 <div class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
                                 </div>
-                                @Html.DevExpress().DateEditFor(q=> q.fecha_fin, settings =>
+                                @Html.DevExpress().DateEditFor(q=> q.fecha_ini, settings =>
                             {
-                                settings.Name = "fecha_fin";
+                                settings.Name = "fecha_ini";
                                 settings.Properties.UseMaskBehavior = true;
                                 settings.Properties.EditFormat = EditFormat.Date;
                                 settings.Properties.EditFormatString = "dd/MM/yyyy";
                                 settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
                                 settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                             }).GetHtml()
-                                @Html.ValidationMessageFor(q => q.fecha_fin, "", new { @class = "text-danger" })
+                                @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
                             </div>
                         </div>
                     </div>
